# forge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  docker-compose.yml  hello.txt  install.sh  start.sh
.forge/: factory-kanban-tdd-plan.md  factory.db-info  factory.db-shm  factory.db-wal  forge.toml  phases.json  plan.md  spec.md  state
.forge/audit/: current-run.json
.forge/logs/: phase-01-iter-1-prompt.md  phase-02-iter-1-prompt.md  phase-03-iter-1-prompt.md  phase-04-iter-1-prompt.md  phase-05-iter-1-prompt.md  phase-06-iter-1-prompt.md  phase-07-iter-1-prompt.md  phase-08-iter-1-prompt.md  phase-09-iter-1-prompt.md
.github/workflows/: ci.yml  release.yml
02/22b838c8bc/: metadata.json
04/a9d10a2a9e/: metadata.json
04/d44b2ebf50/: metadata.json
07/a3483774d0/: metadata.json
0b/71da8daa7d/: metadata.json
0e/4135cef0b1/: metadata.json
0f/d963dd177b/: metadata.json
15/c1d80a39c3/: metadata.json
16/d858b91dd3/: metadata.json
18/3772626826/: metadata.json
1d/7bc35e422f/: metadata.json
25/6c21c03bd5/: metadata.json
26/d7434acc95/: metadata.json
38/c4c4e4df52/: metadata.json
39/a49089bee6/: metadata.json
3c/32ca9d34b9/: metadata.json
3d/6ca2172d98/: metadata.json
40/e7b625b2e1/: metadata.json
42/ca0fd267ec/: metadata.json
44/5f1fe63848/: metadata.json
46/24ca498585/: metadata.json
47/95c4b80e80/: metadata.json
48/be624ce3ff/: metadata.json
4b/e9fe84b601/: metadata.json
50/057abfa7ff/: metadata.json
52/0f28af79b0/: metadata.json
53/3fe0e6bd3e/: metadata.json
56/fb76d6e98a/: metadata.json
58/09f6a7b675/: metadata.json
59/acd1635b5e/: metadata.json
60/c373d822e7/: metadata.json
68/7d19e36371/: metadata.json
68/925a223931/: metadata.json
74/034160a199/: metadata.json
78/476cb51324/: metadata.json
7a/2d769abd6e/: metadata.json
7a/aa9244c6f6/: metadata.json
7f/d48630558a/: metadata.json
7f/e43885edc5/: metadata.json
81/931852556a/: metadata.json
83/33bad1f911/: metadata.json
85/be27e81fec/: metadata.json
89/c8104c9c6a/: metadata.json
8f/f46773f2f7/: metadata.json
92/5fb1e4c19a/: metadata.json
92/651821a058/: metadata.json
97/b3ea372053/: metadata.json
9d/5c93a50717/: metadata.json
9f/8c4b06fbf8/: metadata.json
a0/2eb5d43d01/: metadata.json
a5/bea06bc98b/: metadata.json
a7/ced7af9604/: metadata.json
ac/36fb72be8c/: metadata.json
b1/8fabae327f/: metadata.json
b1/c4490fb046/: metadata.json
b4/51cc4d3b37/: metadata.json
b4/5f7fa2eb44/: metadata.json
b4/66e7dcc1e3/: metadata.json
b5/5b249acde8/: metadata.json
b7/3946df38ae/: metadata.json
b7/c98c8c4f46/: metadata.json
c7/bd43833926/: metadata.json
c9/c9d08e53e9/: metadata.json
cd/aadbeb82b7/: metadata.json
crates/forge-common/: Cargo.toml
crates/forge-common/src/: direct_execution.rs  events.rs  facade.rs  ids.rs  lib.rs  manifest.rs  output_parser.rs  policy.rs  run_graph.rs  runtime.rs
crates/forge-proto/: Cargo.toml  build.rs
crates/forge-proto/proto/: runtime.proto
crates/forge-proto/src/: lib.rs
crates/forge-proto/src/convert/: enums.rs  ids.rs  manifest.rs  mod.rs  run_graph.rs
crates/forge-runtime/: Cargo.toml
crates/forge-runtime/src/: event_stream.rs  lib.rs  main.rs  profile_compiler.rs  recovery.rs  run_orchestrator.rs  scheduler.rs  server.rs  shutdown.rs  task_manager.rs  version.rs
crates/forge-runtime/src/runtime/: bwrap.rs  docker.rs  host.rs  io.rs  mod.rs
crates/forge-runtime/src/state/: agent_instances.rs  events.rs  mod.rs  runs.rs  schema.rs  tasks.rs
crates/forge-runtime/tests/: approval_rpcs.rs  control_rpcs.rs  create_child_task.rs  event_streaming.rs  grpc_health.rs  query_rpcs.rs  submit_run.rs
d5/63d6982e6a/: metadata.json
da/0e52498d3c/: metadata.json
db/73ff066e81/: metadata.json
db/fac84969cc/: metadata.json
dd/ad9c547748/: metadata.json
docs/: context-graph-file-deps.md  context-graph.md  issue-execution-flow.md  linear-module-walkthrough.md  module-walkthrough.md
docs/adr/: 001-dag-scheduler.md
docs/designs/: 2026-01-26-swarm-orchestration-design.md
docs/investigations/: 2026-03-14-pr21-review-report.md
docs/plans/: 2026-01-24-forge-implement-design.md  2026-01-24-github-agent-design.md  2026-01-25-development-skills-design.md  2026-02-23-docker-local-setup-design.md  2026-02-23-docker-local-setup.md  2026-02-23-github-device-flow.md  2026-02-24-docker-sandbox-design.md  2026-02-24-docker-sandbox-implementation.md  2026-02-24-github-issue-sync.md  2026-02-24-pipeline-execution-design.md  2026-02-25-agent-team-pipeline-design.md  2026-02-25-agent-team-pipeline.md  2026-02-25-autonomous-agents-design.md  2026-02-25-autonomous-agents-implementation.md  2026-02-25-frontend-backend-gap-fix-design.md  2026-02-25-frontend-backend-gap-fix.md  2026-02-25-remaining-review-issues.md  2026-02-26-feedback-loops.md  2026-02-26-fully-typed.md  2026-02-26-self-documenting.md  2026-02-26-test-coverage.md  2026-02-26-traversable.md  2026-02-27-mission-control-implementation.md  2026-02-27-mission-control-ui-design.md  2026-03-06-cli-autocomplete-design.md  2026-03-06-database-improvements-turso-design.md  2026-03-06-database-improvements-turso-impl.md  2026-03-09-logging-observability-design.md  2026-03-09-logging-observability-impl.md  test-spec.md
e7/d51cdde391/: metadata.json
e8/0d156a82c3/: metadata.json
ee/060b9aed4f/: metadata.json
f0/27f4cdeaeb/: metadata.json
f1/42d8a38c08/: metadata.json
f8/edad3bca92/: metadata.json
ff/fe9abf5966/: metadata.json
scripts/: run-autoresearch-tasks.sh
src/: config.rs  errors.rs  forge_config.rs  lib.rs  main.rs  phase.rs  telemetry.rs  update_check.rs  util.rs
src/audit/: logger.rs  mod.rs
src/autoresearch/: benchmarks.rs  mod.rs
src/cmd/: compact.rs  config.rs  factory.rs  mod.rs  patterns.rs  phase.rs  project.rs  run.rs  skills.rs  swarm.rs  update.rs
src/compaction/: config.rs  manager.rs  (+3 more)
tests/: integration_tests.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+811 files in other folders)
