[package]
name = "forge"
version = "0.1.0"
edition = "2024"
description = "AI-powered development orchestrator - execute specs through sequential phases"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Async
tokio = { version = "1", features = ["full", "process"] }

# Git
git2 = "0.19"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
walkdir = "2"
glob = "0.3"
dirs = "5"
toml = "0.8"
regex = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
