[workspace]
members = [
    ".",
    "crates/forge-common",
    "crates/forge-proto",
    "crates/forge-runtime",
]
resolver = "2"

[package]
name = "forge"
version = "0.1.0"
edition = "2024"
description = "AI-powered development orchestrator - execute specs through sequential phases"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
console = "0.16"
indicatif = "0.18"

# Async
tokio = { version = "1", features = ["full", "process"] }
futures = "0.3"
futures-util = "0.3"

# HTTP Server (for swarm callback server)
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
open = "5"
reqwest = { version = "0.13", features = ["json", "form", "query", "rustls"] }

# Git
git2 = "0.20.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Utilities
anyhow = "1"
thiserror = "2"
forge-common = { path = "crates/forge-common" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
walkdir = "2"
glob = "0.3"
dirs = "6"
toml = "1"
regex = "1"
textwrap = "0.16"
terminal_size = "0.4"
libsql = "0.9"
dotenvy = "0.15"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
fs2 = "0.4"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
bollard = "0.20"
async-trait = "0.1"
openssl = { version = "0.10", optional = true }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
tracing-opentelemetry = { version = "0.28", optional = true }
opentelemetry = { version = "0.27", optional = true }
opentelemetry-otlp = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", optional = true }

[features]
default = []
openssl-vendored = ["openssl/vendored"]
otlp = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
