[package]
name = "forge-common"
version = "0.1.0"
edition = "2024"
description = "Shared domain types for the Forge runtime platform"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "process", "rt", "sync", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
