[package]
name = "forge-runtime"
version = "0.1.0"
edition = "2024"
description = "Forge runtime daemon - authoritative run orchestration over gRPC/UDS"

[lib]
path = "src/lib.rs"

[[bin]]
name = "forge-runtime"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bollard = "0.20"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
forge-common = { path = "../forge-common" }
forge-proto = { path = "../forge-proto" }
futures-util = "0.3"
hex = "0.4"
hyper-util = "0.1"
libc = "0.2"
prost = "0.13"
prost-types = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = "0.7"
tonic = "0.12"
toml = "0.8"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
